--- a/app/views/soy_beans/index.html.erb
+++ b/app/views/soy_beans/index.html.erb
@@ -1,18 +1,36 @@
+<%= render 'banner' %>
 
-<%= simple_form_for :search, url: root_path, method: "GET", html: { class: 'form-inline' } do |f| %>
-  <%= f.input :classification, collection: SoyBean.distinct.pluck(:classification) %>
-  <%= f.input :date, collection: SoyBean.distinct.pluck(:date) %>
-  <%= f.input :precip, collection: SoyBean.distinct.pluck(:precip) %>
-  <%= f.input :temp, collection: SoyBean.distinct.pluck(:temp) %>
-  <%= f.input :area_damaged, collection: SoyBean.distinct.pluck(:area_damaged) %>
-  <%= f.input :severity, collection: SoyBean.distinct.pluck(:severity) %>
-  <%= f.submit "Search", class: "btn btn-primary" %>
-<% end %>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Filter Data</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <%= simple_form_for :search, url: root_path, method: "GET", html: { class: 'form-inline' } do |f| %>
+          <%= f.input :classification, label: 'Disease', collection: SoyBean.distinct.pluck(:classification) %>
+          <%= f.input :date, label: 'Month', collection: SoyBean.distinct.pluck(:date) %>
+          <%= f.input :precip, label: 'Precipitation', collection: SoyBean.distinct.pluck(:precip) %>
+          <%= f.input :temp, label: 'Temperature', collection: SoyBean.distinct.pluck(:temp) %>
+          <%= f.input :area_damaged, label: 'Damage', collection: SoyBean.distinct.pluck(:area_damaged) %>
+          <%= f.input :severity, label: 'Severity', collection: SoyBean.distinct.pluck(:severity) %>
+      </div>
+      <div class="modal-footer">
+          <%= f.submit "Search", class: "btn btn-primary" %>
+          <%= link_to 'Clear', root_path, class: "btn btn-secondary" %>
+      </div>
+        <% end %>
+    </div>
+  </div>
+</div>
 
-<% @soy_beans.each do |bean| %>
-  <div class="container">
+<div class="container">
+  <% @soy_beans.each do |bean| %>
     <h1><%= bean.classification %></h1>
     <p><%="Date: #{bean.date}"%></p>
     <p><%="Damage severity: #{bean.severity}"%></p>
-  </div>
-<% end %>
+  <% end %>
+</div>
