--- a/app/assets/stylesheets/soy_beans.scss
+++ b/app/assets/stylesheets/soy_beans.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the SoyBeans controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.soy-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
