Card layout fixes

--- a/app/assets/stylesheets/soy_beans.scss
+++ b/app/assets/stylesheets/soy_beans.scss
@@ -4,6 +4,6 @@
 
 .soy-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
 }
