Stick navbar to top on scroll and text color modifications

--- a/app/views/soy_beans/_banner.html.erb
+++ b/app/views/soy_beans/_banner.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-light sticky-top">
   <%= link_to "Soybituary", root_path, class:"navbar-brand" %>
   <div class="form-inline">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
