--- a/app/views/soy_beans/index.html.erb
+++ b/app/views/soy_beans/index.html.erb
@@ -10,6 +10,7 @@
         </button>
       </div>
       <div class="modal-body">
+        <p class="font-weight-bold">Choose one or more fields to filter results</p>
         <%= simple_form_for :search, url: root_path, method: "GET" do |f| %>
           <%= f.input :classification, label: 'Disease', collection: SoyBean.distinct.pluck(:classification), required: false %>
           <%= f.input :date, label: 'Month', collection: SoyBean.distinct.pluck(:date), required: false %>
@@ -28,12 +29,12 @@
 </div>
 
 <div class="container mt-3 mb-3">
-  <h5><%= @soy_beans_count > 0 ? "Results found: #{@soy_beans_count}" : "No instances found, please try another filter" %></h5>
+  <h5 class="text-black-50"><%= @soy_beans_count > 0 ? "Results found: #{@soy_beans_count}" : "No instances found, please try another filter" %></h5>
   <div class="soy-grid">
     <% @soy_beans.each do |bean| %>
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title"><%= bean.classification.gsub("-", " ").capitalize %></h5>
+          <h5 class="card-title border-bottom"><%= bean.classification.gsub("-", " ").capitalize %></h5>
           <h6 class="card-subtitle mb-2"><%="Date: #{bean.date.capitalize}"%></h6>
           <p class="card-text mb-0">Area damaged: <strong><%= bean.area_damaged.capitalize %></strong></p>
           <p class="card-text mb-0">Damage severity: <strong><%= bean.severity.capitalize %></strong></p>
