--- a/app/views/soy_beans/index.html.erb
+++ b/app/views/soy_beans/index.html.erb
@@ -18,12 +18,12 @@
           <%= f.input :temp, label: 'Temperature', collection: SoyBean.distinct.pluck(:temp), required: false %>
           <%= f.input :area_damaged, label: 'Damage', collection: SoyBean.distinct.pluck(:area_damaged), required: false %>
           <%= f.input :severity, label: 'Severity', collection: SoyBean.distinct.pluck(:severity), required: false %>
-      </div>
-      <div class="modal-footer">
-          <%= f.submit "Search", class: "btn btn-primary" %>
-          <%= link_to 'Clear', root_path, class: "btn btn-secondary" %>
-      </div>
+          <div class="d-flex pt-3 justify-content-between border-top">
+            <%= f.submit "Search", class: "btn btn-primary" %>
+            <%= link_to 'Clear', root_path, class: "btn btn-secondary" %>
+          </div>
         <% end %>
+      </div>
     </div>
   </div>
 </div>
@@ -34,7 +34,7 @@
     <% @soy_beans.each do |bean| %>
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title border-bottom"><%= bean.classification.gsub("-", " ").capitalize %></h5>
+          <h5 class="card-title pb-2 border-bottom"><%= bean.classification.gsub("-", " ").capitalize %></h5>
           <h6 class="card-subtitle mb-2"><%="Date: #{bean.date.capitalize}"%></h6>
           <p class="card-text mb-0">Area damaged: <strong><%= bean.area_damaged.capitalize %></strong></p>
           <p class="card-text mb-0">Damage severity: <strong><%= bean.severity.capitalize %></strong></p>
